<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Clean Architecture</string>

    <string name="checkout">Checkout</string>
    <string name="payment">Payment</string>
    <string name="purchase_done">Thanks for your purchase!</string>
    <string name="your_cart">Your Cart</string>
    <string name="shop">Shop</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="place_order">Place order</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="error_while_loading_your_data_please_try_again">Error while loading your data. Please, try again!</string>
    <string name="try_again">Try again</string>
    <string name="total">Total:</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="my_orders">My orders</string>
    <string name="search">Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="prompt_fname">First name</string>
    <string name="prompt_sname">Last name</string>
    <string name="prompt_phone">Phone</string>
    <string name="please_sign_in">You have to register or log in to your existing account to make purchases in %1$s</string>
    <string name="login_signup_title">Log in or Sign up</string>
    <string name="sign_in_register">Sign In/Register</string>
    <string name="sign_out">Sign out</string>
    <string name="logged_in_as">Logged in as: %1$s%2$s</string>
    <string name="all_orders">All orders</string>
    <string name="contact_details">Contact Details</string>
    <string name="my_cart">My cart</string>
    <string name="go_to_website">Go to website</string>
    <string name="pay_now">Pay now</string>
    <string name="total_2">Total:</string>
    <string name="order_numb">Order #</string>
    <string name="not_paid">Not paid</string>
    <string name="paid">Paid</string>
    <string name="closed">Closed</string>
    <string name="you_ordered">You ordered:</string>
    <string name="back_to_shop">Back to shop</string>
    <string name="purchase_error">Payment Unsuccessful.\n Go to All Orders to try again</string>
    <string name="purchase_error_title">Payment unsuccessful</string>
    <string name="my_addresses">My addresses</string>
    <string name="selected_delivery_address">Selected delivery address:</string>
    <string name="change_delivery_address">Select delivery address</string>
    <string name="nothing_found_try_another_request">Nothing found. Try another request.</string>
    <string name="search_request_here">Search request here...</string>
    <string name="please_address">Please, select delivery address!</string>
    <string name="def_address_title">Default address selection</string>
    <string name="please_add_at_least_one_contact_address">Please, add at least one Contact Address</string>
    <string name="add_address">Add address</string>
    <string name="add_address_title">Add new address</string>
    <string name="add_address_button">Add address</string>
    <string name="new_address">New address</string>
</resources>
